# soroban-playground

./: .gitignore  .gitleaksignore  Cargo.toml  ISSUE_SYNTHETIC_ASSETS_TESTS.md  ISSUE_TEMPLATE.md  README.md  docker-compose.yml  package-lock.json  package.json  pr_body.md  sorobanplaybook
.github/workflows/: backend-lint.yml
backend/: .env.example  .eslintrc.js  .prettierignore  Dockerfile  README.md  TRACING.md  babel.config.cjs  eslint.config.js  jest.config.cjs  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/migrations/: README.md
backend/src/: cleanupWorker.js  server.js  tracing.js  websocket.js
backend/test/: errorHandler.test.js
backend/tests/: admin.test.js  analyticsService.test.js  auditLogger.test.js  authService.test.js  compile.test.js  compileBatch.test.js  configValidation.test.js  corsConfig.test.js  deployBatch.test.js  deployService.test.js  graphql.test.js  health.test.js  integration.runner.js  invoke.test.js  invokeService.test.js  load-test.ts  migration.test.js  migrationService.test.js  notary.test.js  notaryService.test.js  optimizer.test.js  orderbook.test.js  patent.test.js  persistence-test.js  quadraticVoting.test.js  runner.js  syntheticAssets.basic.test.js  syntheticAssets.database.test.js  syntheticAssets.e2e.test.js  syntheticAssets.error.test.js  syntheticAssets.integration.test.js  syntheticAssets.minimal.test.js  syntheticAssets.unit.test.js  syntheticAssets.websocket.test.js  tokenGatedAccess.test.js  tokenizedReit.test.js  transactionSubmitter.test.js
contracts/: README.md
contracts/access-control/: Cargo.toml  README.md
contracts/airdrop/: Cargo.toml
contracts/analysis-utils/: Cargo.toml  README.md
contracts/bug-bounty/: Cargo.toml
contracts/carbon-credit-oracle/: Cargo.toml
contracts/cloud-storage/: Cargo.toml
contracts/cross-contract-utils/: Cargo.toml  README.md
contracts/debugging-utils/: Cargo.toml  README.md
contracts/erc-721/: Cargo.toml  README.md
contracts/flash-loan/: Cargo.toml
contracts/insurance-oracle/: Cargo.toml  README.md
contracts/interest-rate-model/: Cargo.toml
contracts/interest-rate-model/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/lending-protocol/: Cargo.toml
contracts/options-protocol/: Cargo.toml
contracts/pause-toggle-contract/: README.md
contracts/payment_splitter/: Cargo.toml
contracts/price-feed-aggregator/: Cargo.toml  README.md
contracts/price_feed_adapter/: Cargo.toml
contracts/property-testing/: Cargo.toml  README.md
contracts/proxy-pattern/: Cargo.toml
contracts/real-estate-oracle/: Cargo.toml
contracts/registry-integration/: Cargo.toml  README.md
contracts/registry-integration/src/: lib.rs  test.rs
contracts/simulation-engine/: Cargo.toml
contracts/simulation-engine/src/: lib.rs
contracts/sports-results-oracle/: Cargo.toml  README.md
contracts/staking/: Cargo.toml
contracts/storage-utils/: Cargo.toml  README.md
contracts/storage-utils/src/: lib.rs  test.rs  types.rs
contracts/subscription_manager/: Cargo.toml
contracts/supply-chain-data-oracle/: Cargo.toml  README.md
contracts/supply-chain-data-oracle/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/supply-chain-oracle/: Cargo.toml  README.md
contracts/supply-chain-oracle/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/testing-framework/: Cargo.toml  README.md
contracts/testing-framework/src/: assertions.rs  fuzz.rs  harness.rs  lib.rs  mock_oracle.rs  mock_token.rs  test.rs
contracts/token-gated-access/: Cargo.toml
contracts/token_contract/: Cargo.toml
contracts/upgradeable/: Cargo.toml  README.md
contracts/upgradeable/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/versioned/: Cargo.toml  README.md
contracts/voting/: Cargo.toml  README.md
contracts/weather-oracle/: Cargo.toml  README.md
contracts/weather-oracle/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/yield-optimizer/: Cargo.toml
data/: branch_list.txt
docs/: IMPLEMENTATION_SUMMARY.md  PATENT_REGISTRY_IMPLEMENTATION.md
docs/guides/: SEARCH_GUIDE.md
docs/issues/: ISSUE_BACKEND_ABI_PARSING.md  ISSUE_BACKEND_ALERTING.md  ISSUE_BACKEND_AUDIT_LOGGING.md  ISSUE_BACKEND_CIRCUIT_BREAKERS.md  ISSUE_BACKEND_CIRCUIT_BREAKER_CONFIG.md  ISSUE_BACKEND_CIRCUIT_BREAKER_FALLBACKS.md  ISSUE_BACKEND_CIRCUIT_BREAKER_INTEGRATION.md  ISSUE_BACKEND_COMPLIANCE.md  ISSUE_BACKEND_CONTRACT_REGISTRY.md  ISSUE_BACKEND_CONTRACT_VERIFICATION.md  ISSUE_BACKEND_EXECUTION_SANDBOX.md  ISSUE_BACKEND_HEALTH_CHECKS.md  ISSUE_BACKEND_INPUT_SANITIZATION.md  ISSUE_BACKEND_LOGGING.md  ISSUE_BACKEND_MONITORING.md  ISSUE_BACKEND_OUTPUT_ENCODING.md  ISSUE_BACKEND_RATE_LIMITING.md  ISSUE_BACKEND_RETRY_LOGIC.md  ISSUE_BACKEND_SECURITY_HEADERS.md  ISSUE_BACKEND_TRACING.md  ISSUE_FRONTEND_DARK_MODE.md  ISSUE_FRONTEND_DEPLOYMENT_NETWORK.md  ISSUE_FRONTEND_DEPLOYMENT_PARAMETERS.md  ISSUE_FRONTEND_DEPLOYMENT_WIZARD.md  ISSUE_FRONTEND_ERROR_RECOVERY.md  ISSUE_FRONTEND_INTERACTION_HISTORY.md  ISSUE_FRONTEND_KEYBOARD_NAVIGATION.md  ISSUE_FRONTEND_RESPONSIVE.md  ISSUE_FRONTEND_STORAGE_BROWSER.md  ISSUE_FRONTEND_TEMPLATE_DOCS.md  ISSUE_FRONTEND_TEMPLATE_FAVORITES.md  ISSUE_FRONTEND_TEMPLATE_FAVORITES_EXPORT.md  ISSUE_FRONTEND_TEMPLATE_FAVORITES_ORGANIZATION.md  ISSUE_FRONTEND_TEMPLATE_FAVORITES_SEARCH.md  ISSUE_FRONTEND_TEMPLATE_FAVORITES_STATUS.md  ISSUE_FRONTEND_TEMPLATE_FAVORITES_SYNC.md  ISSUE_FRONTEND_TEMPLATE_FILTERING.md  ISSUE_FRONTEND_TEMPLATE_LIBRARY.md  (+35 more)
frontend/: Dockerfile  jest.config.js  next.config.ts  package-lock.json  package.json
scripts/: check-license.js  test-dsl.js
(+308 files in other folders)
