[package]
name = "supply-chain-oracle"
version = "0.1.0"
edition = "2021"
description = "Supply chain oracle with shipment lifecycle tracking, provenance verification, and multi-source consensus"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
