[package]
name = "testing-framework"
version = "0.1.0"
edition = "2021"
description = "Standardized testing utilities for Soroban contracts: TestHarness, MockOracle, MockToken, TestAssertions, FuzzTester"
publish = false

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }
proptest = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
